Fix deprecated integer creation